build: consolidate arcadedb-test-utils into server test-jar + fix HA bootstrap-fingerprint replay race (#4259)
(cherry picked from commit 6eb94b15c2f31845d1e1faf8586e5651c4d21bde)