@@ -1159,7 +1159,7 @@ class QueryTest extends TestHelper {
       assertThat(ridList).isInstanceOf(List.class);
       final List<?> rids = (List<?>) ridList;
       assertThat(rids).hasSize(1);
-      assertThat(rids.getFirst()).isInstanceOf(RID.class);
+      assertThat(rids.get(0)).isInstanceOf(RID.class);
       rs.close();
     });
   }
@@ -1182,7 +1182,7 @@ class QueryTest extends TestHelper {
       assertThat(ridList).isInstanceOf(List.class);
       final List<?> rids = (List<?>) ridList;
       assertThat(rids).hasSize(1);
-      assertThat(rids.getFirst()).isInstanceOf(RID.class);
+      assertThat(rids.get(0)).isInstanceOf(RID.class);
       rs.close();
     });
   }
@@ -1325,7 +1325,7 @@ class QueryTest extends TestHelper {
       assertThat(inList).isInstanceOf(List.class);
       final List<?> rids = (List<?>) inList;
       assertThat(rids).hasSize(1);
-      assertThat(rids.getFirst()).isInstanceOf(RID.class);
+      assertThat(rids.get(0)).isInstanceOf(RID.class);
       rs.close();
     });
   }
